chore: add Privacy Policy Page
